# regilite

./: .clang-format  .gitignore  CMakeLists.txt  README.rst
.devcontainer/: Dockerfile  devcontainer.json
reg-generator/: cmsisSvdParser.py  structuralModel.py
reg-generator/regenerator/: cmsisSvdParser.py  generateHeader.py  main.py
reg-generator/templates/: array.stub  struct.stub
regenerator/: .gitignore  CMakeLists.txt  setup.cfg
regenerator/regenerator/: cmsisSvdParser.py  generateHeader.py  main.py  quickReinit.py  structuralModel.py  utils.py
regenerator/regenerator/generator/: cppstruct.py  fieldtype.py  header.py  memberfield.py
regenerator/regenerator/model/: datamembers.py  members.py  types.py
regenerator/regenerator/parser/: cmsissvd.py
regenerator/regenerator/templates/: __init__.py  header.stub  peripheral.stub
regenerator/regenerator/templates/templates/: decl_register.stub  field.stub
regenerator/templates/: __init__.py  array.stub  decl_register.stub  field.stub  header.stub  padding.stub  peripheral.stub  register.stub  struct.stub  struct_type.stub  union.stub  union_type.stub
regenerator/tests/: test_header_file_export copy.py  test_open_definition_file.py
regenerator/tests/cmsis_svd_parser/: test_insert_member_into_struct.py  test_insert_member_into_union.py  test_join_data_members.py  test_join_member_arrays.py  test_join_register_register.py  test_join_register_to_register.py  test_join_struct_register.py  test_join_struct_to_array.py  test_join_struct_to_register.py  test_parse_array.py  test_parse_enum.py  test_parse_field.py  test_parse_member.py  test_parse_peripheral.py  test_parse_register.py
regenerator/tests/generator/: string_unittest_utils.py  test_generate_array_member.py  test_generate_data_member.py  test_generate_field.py  test_generate_field_type.py  test_generate_member_array.py  test_generate_peripheral.py  test_generate_register_member.py  test_generate_register_type.py  test_generate_struct_member.py  test_generate_type_register.py  test_generate_type_struct.py  test_generate_type_union.py
regenerator/tests/model/: test_sizeof_types.py
regilite/: CMakeLists.txt
regilite/src/: basic_field.hpp  default_register.hpp  field.hpp  partition_register.hpp  partition_type.hpp  register_proxy.hpp  traits.hpp
regilite/test/: test_main.cpp
regilite/tests/: CMakeLists.txt  default_register_write.t.cpp  read_snapshot_unit.t.cpp
src/: basic_field.hpp  basic_register.hpp  basicfield.hpp  bit_mask.hpp  bitmask.hpp  field.hpp  field_access.hpp  field_traits.hpp  partition_register.hpp  partition_type.hpp  register.hpp  register_proxy.hpp  traits.hpp  utility.hpp
test/: CMakeLists.txt  basic_register_extract.t.cpp  basic_register_write.t.cpp  compile_time_checks_unit.t.cpp  enum_field_unit.t.cpp  match_field_unit.t.cpp  partition_register_unit.t.cpp  partition_register_write.t.cpp  read_field_unit.t.cpp  read_snapshot_unit.t.cpp  read_write_unit.cpp  special_field_access_unit.t.cpp  test_main.cpp  test_register.hpp  test_registers.hpp  write_field_unit.t.cpp
test/include/: check_register.hpp  test_registers.hpp
