[metadata]
name = regilite-regenerator
version = 0.0.1
author = Daniel Way
description = A utility for generating C++ header files compatible with the Regilite library
url = https://github.com/waydan/regilite

[options]
packages = find:
python_requires = >= 3.6
include_package_data = True

[options.packages.find]
exclude =
    tests

[options.package_data]
regenerator.templates = *.stub

[options.entry_points]
console_scripts =
    regilite-regenerator = regenerator.main:main