function(new_test test_name)
    add_executable(${test_name} ${ARGN})
    target_link_libraries(${test_name} PRIVATE regilite CppUTest)
    add_test(NAME ${test_name} COMMAND ${test_name})
endfunction()

include_directories(include)

new_test(default-register-write default_register_write.t.cpp test_main.cpp)
new_test(default-register-extract default_register_extract.t.cpp test_main.cpp)
new_test(default-register-match default_register_match.t.cpp test_main.cpp)
new_test(partition-register-write partition_register_write.t.cpp test_main.cpp)
# new_test(partition-register-extract read_field_unit.t.cpp test_main.cpp)
# new_test(partition-register-match match_field_unit.t.cpp test_main.cpp)
new_test(proxy-read-snapshot read_snapshot_unit.t.cpp test_main.cpp)
new_test(proxy-compile-time-checks compile_time_checks_unit.t.cpp test_main.cpp)
